<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="200dp"
        android:layout_height="108dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/smile1" />

    <TextView
        android:id="@+id/happyhomes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arizonia"
        android:text="Happy Homes"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/utechname"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:cursorVisible="true"
        android:drawableStart="@drawable/ic_user_password"
        android:hint="@string/techpass"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_states"
        android:fontFamily="@font/andika"
        android:hint="@string/loginbtn"
        android:textColor="#000000"
        android:textColorHighlight="#000000" />

    <TextView
        android:id="@+id/forgetpass"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginTop="20dp"
        android:text="Forgot Password"
        android:textColor="#000000"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtsignup"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="New Technician? Click Here To SignUp"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>